sas-core/main/default/objects/IRR_CommunicationLog__c/IRR_CommunicationLog__c.object-meta.xml
<CustomObject>
    <label>Communication Log</label>
    <nameField>
        <displayFormat>CLOG-{00000000}</displayFormat>
        <label>Communication Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>