sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_BookingReference__c.field-meta.xml
<CustomField>
    <fullName>IRR_BookingReference__c</fullName>
    <externalId>true</externalId>
    <label>Booking Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>