sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_Channel__c.field-meta.xml
<CustomField>
    <fullName>IRR_Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>