sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_CompositeId__c.field-meta.xml
<CustomField>
    <fullName>IRR_CompositeId__c</fullName>
    <description>The composite id of the message in marketing cloud.</description>
    <externalId>true</externalId>
    <label>Composite Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>