sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_ContactKey__c.field-meta.xml
<CustomField>
    <fullName>IRR_ContactKey__c</fullName>
    <externalId>true</externalId>
    <label>Contact Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>