sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_CouponBatchId__c.field-meta.xml
<CustomField>
    <fullName>IRR_CouponBatchId__c</fullName>
    <label>IRR Coupon Batch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>