sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_EBNumber__c.field-meta.xml
<CustomField>
    <fullName>IRR_EBNumber__c</fullName>
    <label>EB Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>