sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>IRR_ErrorMessage__c</fullName>
    <description>The error message, in case of an error.</description>
    <label>Error Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>