sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_ErrorReason__c.field-meta.xml
<CustomField>
    <fullName>IRR_ErrorReason__c</fullName>
    <description>The error reason for failing to send the message.</description>
    <label>Error Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>