sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_ExternalGroupId__c.field-meta.xml
<CustomField>
    <fullName>IRR_ExternalGroupId__c</fullName>
    <description>External id for the group the message belongs to. Multiple messages may belong to the same group and is used to identify  when sending the same message to multiple recipients.</description>
    <externalId>true</externalId>
    <label>External Group Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>