sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>IRR_ExternalId__c</fullName>
    <description>The external id uniquely identifying the specific message in the message log.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>