sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_FlightId__c.field-meta.xml
<CustomField>
    <fullName>IRR_FlightId__c</fullName>
    <externalId>true</externalId>
    <label>Flight Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>