sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_Handled__c.field-meta.xml
<CustomField>
    <fullName>IRR_Handled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handled</label>
    <type>Checkbox</type>
</CustomField>