sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_LastName__c.field-meta.xml
<CustomField>
    <fullName>IRR_LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>