sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_LastResponseDate__c.field-meta.xml
<CustomField>
    <fullName>IRR_LastResponseDate__c</fullName>
    <description>The last date and time when a response was received from a customer.</description>
    <inlineHelpText>The last date and time when a response was received from a customer.</inlineHelpText>
    <label>Last Response Date</label>
    <type>DateTime</type>
</CustomField>