sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_MessageKey__c.field-meta.xml
<CustomField>
    <fullName>IRR_MessageKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Message Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>