sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_MessageType__c.field-meta.xml
<CustomField>
    <fullName>IRR_MessageType__c</fullName>
    <description>The type of the message sent. Used to categorize the messages.</description>
    <label>Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>