sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_PassengerName__c.field-meta.xml
<CustomField>
    <fullName>IRR_PassengerName__c</fullName>
    <label>Passenger Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>