sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_Recipient__c.field-meta.xml
<CustomField>
    <fullName>IRR_Recipient__c</fullName>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>