sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_RecipientName__c.field-meta.xml
<CustomField>
    <fullName>IRR_RecipientName__c</fullName>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>