sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_Response__c.field-meta.xml
<CustomField>
    <fullName>IRR_Response__c</fullName>
    <description>The response message from the customer. Separated by comma if multiple with the most recent response first.</description>
    <inlineHelpText>The response message from the customer. Separated by comma if multiple with the most recent response first.</inlineHelpText>
    <label>Response</label>
    <type>TextArea</type>
</CustomField>