sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_ResponseMessage__c.field-meta.xml
<CustomField>
    <fullName>IRR_ResponseMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Message</label>
    <type>Checkbox</type>
</CustomField>