sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_Status__c.field-meta.xml
<CustomField>
    <fullName>IRR_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>