sas-core/main/default/objects/IRR_CommunicationLog__c/fields/IRR_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>IRR_StatusCode__c</fullName>
    <description>The status code of the message.</description>
    <label>Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>