sas-core/main/default/objects/IRR_CommunicationLog__c/listViews/Delay.listView-meta.xml
<ListView>
    <fullName>Delay</fullName>
	<columns>NAME</columns>
    <columns>IRR_BookingReference__c</columns>
    <columns>IRR_FlightId__c</columns>
    <columns>IRR_Channel__c</columns>
    <columns>IRR_Recipient__c</columns>
	<columns>IRR_MessageType__c</columns>
    <columns>IRR_RecipientName__c</columns>
    <columns>IRR_Status__c</columns>
	<columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
	<filters>
    <field>IRR_MessageType__c</field>
	<operation>equals</operation>
	<value>Delay</value>
	</filters>
    <label>Delay</label>
</ListView>