sas-core/main/default/objects/IRR_CommunicationLog__c/listViews/Manual.listView-meta.xml
<ListView>
    <fullName>Manual</fullName>
	<columns>NAME</columns>
    <columns>IRR_BookingReference__c</columns>
    <columns>IRR_FlightId__c</columns>
    <columns>IRR_Channel__c</columns>
    <columns>IRR_Recipient__c</columns>
	<columns>IRR_MessageType__c</columns>
    <columns>IRR_LastName__c</columns>
    <columns>IRR_Status__c</columns>
	<columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
	<filters>
    <field>IRR_MessageType__c</field>
	<operation>equals</operation>
	<value>Manual</value>
	</filters>
    <label>Manual</label>
</ListView>